@@ -4,6 +4,7 @@ FusionForge-5.3:
 * Users: notify admins when user has validated his account (TrivialDev)
 * scmgit: add browsing capability for user personal repository (TrivialDev)
 * headermenu: new plugin to add links in login/logout menu link (TrivialDev)
+* scmgit: basic activity support (TrivialDev).
 
 FusionForge-5.2:
 * Docman: inject zip as a tree (Capgemini)
